# nft-marketplace-mcp

./: .gitignore  Anchor.toml  DEPLOY.md  DEVNET_SETUP.md  MINT_NFTS.md  QUICK_MINT.md  README.md  RPC_OPTIONS.md  START.md  TEST_STEPS.md  TROUBLESHOOT_NFTS.md  package.json
app/: DEVNET_QUICKSTART.md  README.md  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css  vite-env.d.ts
app/src/components/: NftCard.tsx  NftCardSkeleton.tsx  WalletButton.tsx
app/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  loading.tsx  toast.tsx
app/src/idl/: marketplace.json
app/src/lib/: anchor.ts  data.ts  mcp.ts  nft.ts  wallet.tsx
app/src/pages/: CreateListingPage.tsx  ListingDetailPage.tsx  ListingsPage.tsx
app/src/types/: marketplace.ts
mcp/: Cargo.toml  NEXT_STEPS.md  README.md  test_mcp.sh
mcp-server-http/: Cargo.toml
mcp-server-http/src/: main.rs
mcp/examples/: test_integration.rs
mcp/src/: lib.rs  main.rs  rpc.rs  server.rs
mcp/src/resources/: escrow.rs  listing.rs  mod.rs
mcp/src/tools/: mod.rs  simulate_purchase.rs  validate_listing.rs
nft-marketplace-mcp/: TESTING.md  tsconfig.json
nft-marketplace-mcp/programs/marketplace/src/: errors.rs
nft-marketplace-mcp/tests/: marketplace.ts
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/marketplace/src/instructions/: buy_nft.rs  cancel_listing.rs  create_listing.rs  (+3 more)
scripts/: deploy.sh  mint-nfts-to-wallet.js  mint-test-nfts.sh  mint-to-wallet-simple.sh  mint-to-wallet.sh  start-devnet.sh  start-local.sh
tests/: marketplace.ts
(+4 files in other folders)
