[package]
name = "marketplace-mcp"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# JSON-RPC server (stdio-based)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Solana dependencies
solana-client = "1.18"
solana-sdk = "1.18"
borsh = "1.5"
anchor-lang = "0.29"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
